--- a/public/styles.css
+++ b/public/styles.css
@@ -451,7 +451,7 @@ button:active {
 
     main {
         /*padding: 1rem;*/
-        padding-left: 0%;
+        padding-left: 0;
     }
 
     .menu-item {
